--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "private": true,
   "dependencies": {
     "ethers": "^6.11.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2"
   },
   "devDependencies": {
     "@types/jest": "^29.5.12"
   },
   "jest": {
+    "preset": "ts-jest",
     "testTimeout": 30000,
     "testRegex": ".*\\.spec\\.ts$",
     "testEnvironment": "node"
